--- a/table.html
+++ b/table.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 </head>
-<body>
+<body>   
+<nav>
+<a href="#" > home</a>
+<a href="#" > about</a>
+<a href="#" > contact</a>
+<a href="#" > service</a>
+</nav>
 <table>
 <h1>  Allama Iqbal College </h1>
 <p>  Biharsharif  </p><hr>
@@ -11,10 +17,10 @@
 </table>
 <hr>
 <table> 
-<th>   subject   <th/>
-<th>   min marks   <th/>
-<th>   max marks   <th/>
-<th>   obtain marks   <th/>
+<th>   subject   </th>
+<th>   min marks   </th>
+<th>   max marks   </th>
+<th>   obtain marks   </th>
 <tr>
 <td> cpp </td>
 <td> 30 </td>
